frontends/web/src/components/sidebar/sidebar.css
.sidebarOverlay {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.3);
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
    opacity: 0;
    animation-delay: 0.2s;
    transition: all ease 0.2s;
}

.sidebarOverlay.active {
    opacity: 1;
    z-index: 4001;
}

.sidebar {
    position: fixed;
    margin-left: -70%;
    align-content: stretch;
    background-color: var(--color-dark);
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    justify-content: flex-start;
    height: 100vh;
    padding: 0 0 var(--spacing-default) 0;
    width: var(--sidebar-width-large);
    z-index: 4002;
    overflow-y: auto;
    transition: all 0.2s ease;
}

.sidebar > *.end {
    margin-top: auto;
    padding-top: var(--sidebar-margin);
}

.sidebar.forceShow {
    margin-left: 0;
}

.sidebar .sidebarLogoContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 80px;
    padding: calc(var(--spacing-default) + var(--spacing-half)) var(--spacing-large);
    background-size: cover;
    background-color: rgba(0, 0, 0, 0.1);
    opacity: 1;
    transition: opacity 0.2s ease;
}

.sidebarLogoContainer img {
    margin-bottom: 0;
    width: auto !important;
    height: var(--sidebar-icon-size) !important;
}

.sidebarHeaderContainer {
    margin-top: var(--sidebar-margin);
    margin-bottom: var(--sidebar-header-size);
    padding: 0 var(--sidebar-margin);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.sidebarHeader {
    font-size: var(--sidebar-header-size);
    line-height: var(--sidebar-header-line-height);
    color: var(--color-gray);
    text-transform: uppercase;
}

.sidebarHeaderAction {
    height: var(--sidebar-header-line-height);
}

.sidebarHeaderAction > a {
    height: 100% !important;
}

.sidebarHeaderAction > a > svg {
    height: var(--sidebar-header-line-height);
    width: auto;
    stroke: var(--color-gray);
    transition: stroke 0.2s ease;
}

.sidebarHeaderAction:hover > a > svg {
    stroke: var(--color-white);
}

.sidebarItem {
    display: block;
}

.sidebarItem a {
    position: relative;
    color: white;
    cursor: default;
    height: var(--sidebar-item-height);
    text-decoration: none;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 2px;
}

.sidebarItem a.sidebar-active {
    text-decoration: none;
    background-color: rgba(255, 255, 255, 0.1);
}

.sidebarItem .stacked,
.sidebarItem .single {
    margin: 0 var(--sidebar-icon-margin) 0 var(--sidebar-margin);
}

a.sidebar-active .sidebar_label,
.sidebar a:hover .sidebar_label {
    color: var(--color-white);
}

.sidebar a.sidebar-active .sidebar_label {
    font-weight: normal;
}

a.sidebar-active .stacked img:first-child,
.sidebar a:hover .stacked img:first-child {
    opacity: 0;
}

a.sidebar-active .stacked img:last-child,
.sidebar a:hover .stacked img:last-child {
    opacity: 1;
}

.stacked {
    position: relative;
}

.stacked img {
    transition: opacity 0.2s ease;
}

.stacked img:last-child {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
}

.sidebar img {
    width: var(--sidebar-icon-size);
    height: auto;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.single img {
    opacity: .6;
    transition: opacity 0.2s ease;
}

a.sidebar-active .single img,
.sidebar a:hover .single img {
    opacity: 1;
}

.sidebar_label {
    color: var(--color-secondary);
    line-height: 1;
    flex: 1;
    padding-top: 0;
    font-size: var(--size-small);
    font-weight: 300;
    transition: all 0.2s ease;
}

@media (min-width: 901px) {
    .sidebar {
        position: relative;
        margin-left: 0;
        width: var(--sidebar-width-large);
    }

    .sidebar .sidebarLogoContainer {
        padding: var(--spacing-large) var(--spacing-large);
        height: 96px;
    }

    .sidebar .sidebarLogoContainer a {
        display: none !important;
    }
}

